k8s_ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: go-scui
  namespace: 'default'
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
    - hosts:
        - 'scui.ctfang.com'
  rules:
    - host: 'scui.ctfang.com'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-scui
                port:
                  number: 8080
